import React from 'react';
import { shallow } from 'enzyme';
import MovieForm from '../../components/MovieForm';
import movies from '../fixtures/movies';

test('should render ExpenseForm correctly', () => {
  const wrapper = shallow(<MovieForm />);

  expect(wrapper).toMatchSnapshot();
});

test('should render ExpenseForm with expense data', () => {
  const wrapper = shallow(<MovieForm movie={movies[0]} />);

  expect(wrapper).toMatchSnapshot();
});

test('should render error for invalid form submission', () => {
  const wrapper = shallow(<MovieForm />);
  expect(wrapper).toMatchSnapshot();

  wrapper.find('form').simulate('submit', {
    preventDefault: () => {}
  });

  expect(wrapper.state('error').length).toBeGreaterThan(0);
  expect(wrapper).toMatchSnapshot();
});

test('should set description on input change', () => {
  const value = 'New description';
  const wrapper = shallow(<MovieForm />);
  wrapper
    .find('input')
    .at(0)
    .simulate('change', {
      target: { value }
    });

  expect(wrapper.state('description')).toBe(value);
});

test('should set note on textarea change', () => {
  const value = 'New note value';
  const wrapper = shallow(<MovieForm />);
  wrapper.find('textarea').simulate('change', {
    target: { value }
  });

  expect(wrapper.state('note')).toBe(value);
});

//test('should set amount if valid input', () => {
  //const value = '3.50';
  //const wrapper = shallow(<ExpenseForm />);
  //wrapper
    //.find('input')
    //.at(1)
    //.simulate('change', {
      //target: { value }
    //});

  //expect(wrapper.state('amount')).toBe(value);
//});

//test('should not set amount if invalid input', () => {
  //const value = '121.122';
  //const wrapper = shallow(<ExpenseForm />);
  //wrapper
    //.find('input')
    //.at(1)
    //.simulate('change', {
      //target: { value }
    //});

  //expect(wrapper.state('amount')).toBe('');
//});

//test('should call onSubmit prop for valid form submission', () => {
  //const onSubmitSpy = jest.fn();
  //const wrapper = shallow(
    //<ExpenseForm expense={expenses[0]} onSubmit={onSubmitSpy} />
  //);
  //wrapper.find('form').simulate('submit', {
    //preventDefault: () => {}
  //});

  //expect(wrapper.state('error')).toBe('');
  //expect(onSubmitSpy).toHaveBeenLastCalledWith({
    //description: expenses[0].description,
    //amount: expenses[0].amount,
    //note: expenses[0].note,
    //createdAt: expenses[0].createdAt
  //});
//});

//test('should set new date on date change', () => {
  //const now = moment();
  //const wrapper = shallow(<ExpenseForm />);
  //wrapper.find('SingleDatePicker').prop('onDateChange')(now);

  //expect(wrapper.state('createdAt')).toEqual(now);
//});

//test('should set calendar focus on change', () => {
  //const focused = true;
  //const wrapper = shallow(<ExpenseForm />);
  //wrapper.find('SingleDatePicker').prop('onFocusChange')({ focused });

  //expect(wrapper.state('calendarFocused')).toBe(focused);
//});
