// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseForm correctly 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Name"
    type="text"
    value=""
  />
  <select
    className="select"
    onChange={[Function]}
    placeholder="Genre"
    value=""
  >
    <option
      value="2019"
    >
      Genre...
    </option>
    <option
      value="Action"
    >
      Action
    </option>
    <option
      value="Animation"
    >
      Animation
    </option>
    <option
      value="Adventure"
    >
      Adventure
    </option>
    <option
      value="Comedy"
    >
      Comedy
    </option>
    <option
      value="Crime"
    >
      Crime
    </option>
    <option
      value="Drama"
    >
      Drama
    </option>
    <option
      value="Fantasy"
    >
      Fantasy
    </option>
    <option
      value="Horror"
    >
      Horror
    </option>
    <option
      value="Romance"
    >
      Romance
    </option>
    <option
      value="Science Fiction"
    >
      Science Fiction
    </option>
    <option
      value="Thriller"
    >
      Thriller
    </option>
  </select>
  <input
    className="text-input"
    onChange={[Function]}
    placeholder="Description"
    type="text"
    value=""
  />
  <input
    className="text-input"
    onChange={[Function]}
    placeholder="Image URL"
    type="text"
    value=""
  />
  <select
    className="select"
    onChange={[Function]}
    placeholder="Year"
    value="2019"
  >
    <option
      key="year0"
      value={2019}
    >
      2019
    </option>
    <option
      key="year1"
      value={2018}
    >
      2018
    </option>
    <option
      key="year2"
      value={2017}
    >
      2017
    </option>
    <option
      key="year3"
      value={2016}
    >
      2016
    </option>
    <option
      key="year4"
      value={2015}
    >
      2015
    </option>
    <option
      key="year5"
      value={2014}
    >
      2014
    </option>
    <option
      key="year6"
      value={2013}
    >
      2013
    </option>
    <option
      key="year7"
      value={2012}
    >
      2012
    </option>
    <option
      key="year8"
      value={2011}
    >
      2011
    </option>
    <option
      key="year9"
      value={2010}
    >
      2010
    </option>
    <option
      key="year10"
      value={2009}
    >
      2009
    </option>
    <option
      key="year11"
      value={2008}
    >
      2008
    </option>
    <option
      key="year12"
      value={2007}
    >
      2007
    </option>
    <option
      key="year13"
      value={2006}
    >
      2006
    </option>
    <option
      key="year14"
      value={2005}
    >
      2005
    </option>
    <option
      key="year15"
      value={2004}
    >
      2004
    </option>
    <option
      key="year16"
      value={2003}
    >
      2003
    </option>
    <option
      key="year17"
      value={2002}
    >
      2002
    </option>
    <option
      key="year18"
      value={2001}
    >
      2001
    </option>
    <option
      key="year19"
      value={2000}
    >
      2000
    </option>
    <option
      key="year20"
      value={1999}
    >
      1999
    </option>
    <option
      key="year21"
      value={1998}
    >
      1998
    </option>
    <option
      key="year22"
      value={1997}
    >
      1997
    </option>
    <option
      key="year23"
      value={1996}
    >
      1996
    </option>
    <option
      key="year24"
      value={1995}
    >
      1995
    </option>
    <option
      key="year25"
      value={1994}
    >
      1994
    </option>
    <option
      key="year26"
      value={1993}
    >
      1993
    </option>
    <option
      key="year27"
      value={1992}
    >
      1992
    </option>
    <option
      key="year28"
      value={1991}
    >
      1991
    </option>
    <option
      key="year29"
      value={1990}
    >
      1990
    </option>
    <option
      key="year30"
      value={1989}
    >
      1989
    </option>
    <option
      key="year31"
      value={1988}
    >
      1988
    </option>
    <option
      key="year32"
      value={1987}
    >
      1987
    </option>
    <option
      key="year33"
      value={1986}
    >
      1986
    </option>
    <option
      key="year34"
      value={1985}
    >
      1985
    </option>
    <option
      key="year35"
      value={1984}
    >
      1984
    </option>
    <option
      key="year36"
      value={1983}
    >
      1983
    </option>
    <option
      key="year37"
      value={1982}
    >
      1982
    </option>
    <option
      key="year38"
      value={1981}
    >
      1981
    </option>
    <option
      key="year39"
      value={1980}
    >
      1980
    </option>
    <option
      key="year40"
      value={1979}
    >
      1979
    </option>
    <option
      key="year41"
      value={1978}
    >
      1978
    </option>
    <option
      key="year42"
      value={1977}
    >
      1977
    </option>
    <option
      key="year43"
      value={1976}
    >
      1976
    </option>
    <option
      key="year44"
      value={1975}
    >
      1975
    </option>
    <option
      key="year45"
      value={1974}
    >
      1974
    </option>
    <option
      key="year46"
      value={1973}
    >
      1973
    </option>
    <option
      key="year47"
      value={1972}
    >
      1972
    </option>
    <option
      key="year48"
      value={1971}
    >
      1971
    </option>
    <option
      key="year49"
      value={1970}
    >
      1970
    </option>
    <option
      key="year50"
      value={1969}
    >
      1969
    </option>
    <option
      key="year51"
      value={1968}
    >
      1968
    </option>
    <option
      key="year52"
      value={1967}
    >
      1967
    </option>
    <option
      key="year53"
      value={1966}
    >
      1966
    </option>
    <option
      key="year54"
      value={1965}
    >
      1965
    </option>
    <option
      key="year55"
      value={1964}
    >
      1964
    </option>
    <option
      key="year56"
      value={1963}
    >
      1963
    </option>
    <option
      key="year57"
      value={1962}
    >
      1962
    </option>
    <option
      key="year58"
      value={1961}
    >
      1961
    </option>
    <option
      key="year59"
      value={1960}
    >
      1960
    </option>
    <option
      key="year60"
      value={1959}
    >
      1959
    </option>
    <option
      key="year61"
      value={1958}
    >
      1958
    </option>
    <option
      key="year62"
      value={1957}
    >
      1957
    </option>
    <option
      key="year63"
      value={1956}
    >
      1956
    </option>
    <option
      key="year64"
      value={1955}
    >
      1955
    </option>
    <option
      key="year65"
      value={1954}
    >
      1954
    </option>
    <option
      key="year66"
      value={1953}
    >
      1953
    </option>
    <option
      key="year67"
      value={1952}
    >
      1952
    </option>
    <option
      key="year68"
      value={1951}
    >
      1951
    </option>
    <option
      key="year69"
      value={1950}
    >
      1950
    </option>
    <option
      key="year70"
      value={1949}
    >
      1949
    </option>
    <option
      key="year71"
      value={1948}
    >
      1948
    </option>
    <option
      key="year72"
      value={1947}
    >
      1947
    </option>
    <option
      key="year73"
      value={1946}
    >
      1946
    </option>
    <option
      key="year74"
      value={1945}
    >
      1945
    </option>
    <option
      key="year75"
      value={1944}
    >
      1944
    </option>
    <option
      key="year76"
      value={1943}
    >
      1943
    </option>
    <option
      key="year77"
      value={1942}
    >
      1942
    </option>
    <option
      key="year78"
      value={1941}
    >
      1941
    </option>
    <option
      key="year79"
      value={1940}
    >
      1940
    </option>
    <option
      key="year80"
      value={1939}
    >
      1939
    </option>
    <option
      key="year81"
      value={1938}
    >
      1938
    </option>
    <option
      key="year82"
      value={1937}
    >
      1937
    </option>
    <option
      key="year83"
      value={1936}
    >
      1936
    </option>
    <option
      key="year84"
      value={1935}
    >
      1935
    </option>
    <option
      key="year85"
      value={1934}
    >
      1934
    </option>
    <option
      key="year86"
      value={1933}
    >
      1933
    </option>
    <option
      key="year87"
      value={1932}
    >
      1932
    </option>
    <option
      key="year88"
      value={1931}
    >
      1931
    </option>
    <option
      key="year89"
      value={1930}
    >
      1930
    </option>
    <option
      key="year90"
      value={1929}
    >
      1929
    </option>
    <option
      key="year91"
      value={1928}
    >
      1928
    </option>
    <option
      key="year92"
      value={1927}
    >
      1927
    </option>
    <option
      key="year93"
      value={1926}
    >
      1926
    </option>
    <option
      key="year94"
      value={1925}
    >
      1925
    </option>
    <option
      key="year95"
      value={1924}
    >
      1924
    </option>
    <option
      key="year96"
      value={1923}
    >
      1923
    </option>
    <option
      key="year97"
      value={1922}
    >
      1922
    </option>
    <option
      key="year98"
      value={1921}
    >
      1921
    </option>
    <option
      key="year99"
      value={1920}
    >
      1920
    </option>
    <option
      key="year100"
      value={1919}
    >
      1919
    </option>
    <option
      key="year101"
      value={1918}
    >
      1918
    </option>
    <option
      key="year102"
      value={1917}
    >
      1917
    </option>
    <option
      key="year103"
      value={1916}
    >
      1916
    </option>
    <option
      key="year104"
      value={1915}
    >
      1915
    </option>
    <option
      key="year105"
      value={1914}
    >
      1914
    </option>
    <option
      key="year106"
      value={1913}
    >
      1913
    </option>
    <option
      key="year107"
      value={1912}
    >
      1912
    </option>
    <option
      key="year108"
      value={1911}
    >
      1911
    </option>
    <option
      key="year109"
      value={1910}
    >
      1910
    </option>
    <option
      key="year110"
      value={1909}
    >
      1909
    </option>
    <option
      key="year111"
      value={1908}
    >
      1908
    </option>
    <option
      key="year112"
      value={1907}
    >
      1907
    </option>
    <option
      key="year113"
      value={1906}
    >
      1906
    </option>
    <option
      key="year114"
      value={1905}
    >
      1905
    </option>
    <option
      key="year115"
      value={1904}
    >
      1904
    </option>
    <option
      key="year116"
      value={1903}
    >
      1903
    </option>
    <option
      key="year117"
      value={1902}
    >
      1902
    </option>
    <option
      key="year118"
      value={1901}
    >
      1901
    </option>
    <option
      key="year119"
      value={1900}
    >
      1900
    </option>
  </select>
  <div>
    <button
      className="button"
    >
      Save Movie
    </button>
  </div>
</form>
`;

exports[`should render ExpenseForm with expense data 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Name"
    type="text"
    value=""
  />
  <select
    className="select"
    onChange={[Function]}
    placeholder="Genre"
    value="Horror"
  >
    <option
      value="2019"
    >
      Genre...
    </option>
    <option
      value="Action"
    >
      Action
    </option>
    <option
      value="Animation"
    >
      Animation
    </option>
    <option
      value="Adventure"
    >
      Adventure
    </option>
    <option
      value="Comedy"
    >
      Comedy
    </option>
    <option
      value="Crime"
    >
      Crime
    </option>
    <option
      value="Drama"
    >
      Drama
    </option>
    <option
      value="Fantasy"
    >
      Fantasy
    </option>
    <option
      value="Horror"
    >
      Horror
    </option>
    <option
      value="Romance"
    >
      Romance
    </option>
    <option
      value="Science Fiction"
    >
      Science Fiction
    </option>
    <option
      value="Thriller"
    >
      Thriller
    </option>
  </select>
  <input
    className="text-input"
    onChange={[Function]}
    placeholder="Description"
    type="text"
    value=""
  />
  <input
    className="text-input"
    onChange={[Function]}
    placeholder="Image URL"
    type="text"
    value=""
  />
  <select
    className="select"
    onChange={[Function]}
    placeholder="Year"
    value=""
  >
    <option
      key="year0"
      value={2019}
    >
      2019
    </option>
    <option
      key="year1"
      value={2018}
    >
      2018
    </option>
    <option
      key="year2"
      value={2017}
    >
      2017
    </option>
    <option
      key="year3"
      value={2016}
    >
      2016
    </option>
    <option
      key="year4"
      value={2015}
    >
      2015
    </option>
    <option
      key="year5"
      value={2014}
    >
      2014
    </option>
    <option
      key="year6"
      value={2013}
    >
      2013
    </option>
    <option
      key="year7"
      value={2012}
    >
      2012
    </option>
    <option
      key="year8"
      value={2011}
    >
      2011
    </option>
    <option
      key="year9"
      value={2010}
    >
      2010
    </option>
    <option
      key="year10"
      value={2009}
    >
      2009
    </option>
    <option
      key="year11"
      value={2008}
    >
      2008
    </option>
    <option
      key="year12"
      value={2007}
    >
      2007
    </option>
    <option
      key="year13"
      value={2006}
    >
      2006
    </option>
    <option
      key="year14"
      value={2005}
    >
      2005
    </option>
    <option
      key="year15"
      value={2004}
    >
      2004
    </option>
    <option
      key="year16"
      value={2003}
    >
      2003
    </option>
    <option
      key="year17"
      value={2002}
    >
      2002
    </option>
    <option
      key="year18"
      value={2001}
    >
      2001
    </option>
    <option
      key="year19"
      value={2000}
    >
      2000
    </option>
    <option
      key="year20"
      value={1999}
    >
      1999
    </option>
    <option
      key="year21"
      value={1998}
    >
      1998
    </option>
    <option
      key="year22"
      value={1997}
    >
      1997
    </option>
    <option
      key="year23"
      value={1996}
    >
      1996
    </option>
    <option
      key="year24"
      value={1995}
    >
      1995
    </option>
    <option
      key="year25"
      value={1994}
    >
      1994
    </option>
    <option
      key="year26"
      value={1993}
    >
      1993
    </option>
    <option
      key="year27"
      value={1992}
    >
      1992
    </option>
    <option
      key="year28"
      value={1991}
    >
      1991
    </option>
    <option
      key="year29"
      value={1990}
    >
      1990
    </option>
    <option
      key="year30"
      value={1989}
    >
      1989
    </option>
    <option
      key="year31"
      value={1988}
    >
      1988
    </option>
    <option
      key="year32"
      value={1987}
    >
      1987
    </option>
    <option
      key="year33"
      value={1986}
    >
      1986
    </option>
    <option
      key="year34"
      value={1985}
    >
      1985
    </option>
    <option
      key="year35"
      value={1984}
    >
      1984
    </option>
    <option
      key="year36"
      value={1983}
    >
      1983
    </option>
    <option
      key="year37"
      value={1982}
    >
      1982
    </option>
    <option
      key="year38"
      value={1981}
    >
      1981
    </option>
    <option
      key="year39"
      value={1980}
    >
      1980
    </option>
    <option
      key="year40"
      value={1979}
    >
      1979
    </option>
    <option
      key="year41"
      value={1978}
    >
      1978
    </option>
    <option
      key="year42"
      value={1977}
    >
      1977
    </option>
    <option
      key="year43"
      value={1976}
    >
      1976
    </option>
    <option
      key="year44"
      value={1975}
    >
      1975
    </option>
    <option
      key="year45"
      value={1974}
    >
      1974
    </option>
    <option
      key="year46"
      value={1973}
    >
      1973
    </option>
    <option
      key="year47"
      value={1972}
    >
      1972
    </option>
    <option
      key="year48"
      value={1971}
    >
      1971
    </option>
    <option
      key="year49"
      value={1970}
    >
      1970
    </option>
    <option
      key="year50"
      value={1969}
    >
      1969
    </option>
    <option
      key="year51"
      value={1968}
    >
      1968
    </option>
    <option
      key="year52"
      value={1967}
    >
      1967
    </option>
    <option
      key="year53"
      value={1966}
    >
      1966
    </option>
    <option
      key="year54"
      value={1965}
    >
      1965
    </option>
    <option
      key="year55"
      value={1964}
    >
      1964
    </option>
    <option
      key="year56"
      value={1963}
    >
      1963
    </option>
    <option
      key="year57"
      value={1962}
    >
      1962
    </option>
    <option
      key="year58"
      value={1961}
    >
      1961
    </option>
    <option
      key="year59"
      value={1960}
    >
      1960
    </option>
    <option
      key="year60"
      value={1959}
    >
      1959
    </option>
    <option
      key="year61"
      value={1958}
    >
      1958
    </option>
    <option
      key="year62"
      value={1957}
    >
      1957
    </option>
    <option
      key="year63"
      value={1956}
    >
      1956
    </option>
    <option
      key="year64"
      value={1955}
    >
      1955
    </option>
    <option
      key="year65"
      value={1954}
    >
      1954
    </option>
    <option
      key="year66"
      value={1953}
    >
      1953
    </option>
    <option
      key="year67"
      value={1952}
    >
      1952
    </option>
    <option
      key="year68"
      value={1951}
    >
      1951
    </option>
    <option
      key="year69"
      value={1950}
    >
      1950
    </option>
    <option
      key="year70"
      value={1949}
    >
      1949
    </option>
    <option
      key="year71"
      value={1948}
    >
      1948
    </option>
    <option
      key="year72"
      value={1947}
    >
      1947
    </option>
    <option
      key="year73"
      value={1946}
    >
      1946
    </option>
    <option
      key="year74"
      value={1945}
    >
      1945
    </option>
    <option
      key="year75"
      value={1944}
    >
      1944
    </option>
    <option
      key="year76"
      value={1943}
    >
      1943
    </option>
    <option
      key="year77"
      value={1942}
    >
      1942
    </option>
    <option
      key="year78"
      value={1941}
    >
      1941
    </option>
    <option
      key="year79"
      value={1940}
    >
      1940
    </option>
    <option
      key="year80"
      value={1939}
    >
      1939
    </option>
    <option
      key="year81"
      value={1938}
    >
      1938
    </option>
    <option
      key="year82"
      value={1937}
    >
      1937
    </option>
    <option
      key="year83"
      value={1936}
    >
      1936
    </option>
    <option
      key="year84"
      value={1935}
    >
      1935
    </option>
    <option
      key="year85"
      value={1934}
    >
      1934
    </option>
    <option
      key="year86"
      value={1933}
    >
      1933
    </option>
    <option
      key="year87"
      value={1932}
    >
      1932
    </option>
    <option
      key="year88"
      value={1931}
    >
      1931
    </option>
    <option
      key="year89"
      value={1930}
    >
      1930
    </option>
    <option
      key="year90"
      value={1929}
    >
      1929
    </option>
    <option
      key="year91"
      value={1928}
    >
      1928
    </option>
    <option
      key="year92"
      value={1927}
    >
      1927
    </option>
    <option
      key="year93"
      value={1926}
    >
      1926
    </option>
    <option
      key="year94"
      value={1925}
    >
      1925
    </option>
    <option
      key="year95"
      value={1924}
    >
      1924
    </option>
    <option
      key="year96"
      value={1923}
    >
      1923
    </option>
    <option
      key="year97"
      value={1922}
    >
      1922
    </option>
    <option
      key="year98"
      value={1921}
    >
      1921
    </option>
    <option
      key="year99"
      value={1920}
    >
      1920
    </option>
    <option
      key="year100"
      value={1919}
    >
      1919
    </option>
    <option
      key="year101"
      value={1918}
    >
      1918
    </option>
    <option
      key="year102"
      value={1917}
    >
      1917
    </option>
    <option
      key="year103"
      value={1916}
    >
      1916
    </option>
    <option
      key="year104"
      value={1915}
    >
      1915
    </option>
    <option
      key="year105"
      value={1914}
    >
      1914
    </option>
    <option
      key="year106"
      value={1913}
    >
      1913
    </option>
    <option
      key="year107"
      value={1912}
    >
      1912
    </option>
    <option
      key="year108"
      value={1911}
    >
      1911
    </option>
    <option
      key="year109"
      value={1910}
    >
      1910
    </option>
    <option
      key="year110"
      value={1909}
    >
      1909
    </option>
    <option
      key="year111"
      value={1908}
    >
      1908
    </option>
    <option
      key="year112"
      value={1907}
    >
      1907
    </option>
    <option
      key="year113"
      value={1906}
    >
      1906
    </option>
    <option
      key="year114"
      value={1905}
    >
      1905
    </option>
    <option
      key="year115"
      value={1904}
    >
      1904
    </option>
    <option
      key="year116"
      value={1903}
    >
      1903
    </option>
    <option
      key="year117"
      value={1902}
    >
      1902
    </option>
    <option
      key="year118"
      value={1901}
    >
      1901
    </option>
    <option
      key="year119"
      value={1900}
    >
      1900
    </option>
  </select>
  <div>
    <button
      className="button"
    >
      Save Movie
    </button>
  </div>
</form>
`;

exports[`should render error for invalid form submission 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Name"
    type="text"
    value=""
  />
  <select
    className="select"
    onChange={[Function]}
    placeholder="Genre"
    value=""
  >
    <option
      value="2019"
    >
      Genre...
    </option>
    <option
      value="Action"
    >
      Action
    </option>
    <option
      value="Animation"
    >
      Animation
    </option>
    <option
      value="Adventure"
    >
      Adventure
    </option>
    <option
      value="Comedy"
    >
      Comedy
    </option>
    <option
      value="Crime"
    >
      Crime
    </option>
    <option
      value="Drama"
    >
      Drama
    </option>
    <option
      value="Fantasy"
    >
      Fantasy
    </option>
    <option
      value="Horror"
    >
      Horror
    </option>
    <option
      value="Romance"
    >
      Romance
    </option>
    <option
      value="Science Fiction"
    >
      Science Fiction
    </option>
    <option
      value="Thriller"
    >
      Thriller
    </option>
  </select>
  <input
    className="text-input"
    onChange={[Function]}
    placeholder="Description"
    type="text"
    value=""
  />
  <input
    className="text-input"
    onChange={[Function]}
    placeholder="Image URL"
    type="text"
    value=""
  />
  <select
    className="select"
    onChange={[Function]}
    placeholder="Year"
    value="2019"
  >
    <option
      key="year0"
      value={2019}
    >
      2019
    </option>
    <option
      key="year1"
      value={2018}
    >
      2018
    </option>
    <option
      key="year2"
      value={2017}
    >
      2017
    </option>
    <option
      key="year3"
      value={2016}
    >
      2016
    </option>
    <option
      key="year4"
      value={2015}
    >
      2015
    </option>
    <option
      key="year5"
      value={2014}
    >
      2014
    </option>
    <option
      key="year6"
      value={2013}
    >
      2013
    </option>
    <option
      key="year7"
      value={2012}
    >
      2012
    </option>
    <option
      key="year8"
      value={2011}
    >
      2011
    </option>
    <option
      key="year9"
      value={2010}
    >
      2010
    </option>
    <option
      key="year10"
      value={2009}
    >
      2009
    </option>
    <option
      key="year11"
      value={2008}
    >
      2008
    </option>
    <option
      key="year12"
      value={2007}
    >
      2007
    </option>
    <option
      key="year13"
      value={2006}
    >
      2006
    </option>
    <option
      key="year14"
      value={2005}
    >
      2005
    </option>
    <option
      key="year15"
      value={2004}
    >
      2004
    </option>
    <option
      key="year16"
      value={2003}
    >
      2003
    </option>
    <option
      key="year17"
      value={2002}
    >
      2002
    </option>
    <option
      key="year18"
      value={2001}
    >
      2001
    </option>
    <option
      key="year19"
      value={2000}
    >
      2000
    </option>
    <option
      key="year20"
      value={1999}
    >
      1999
    </option>
    <option
      key="year21"
      value={1998}
    >
      1998
    </option>
    <option
      key="year22"
      value={1997}
    >
      1997
    </option>
    <option
      key="year23"
      value={1996}
    >
      1996
    </option>
    <option
      key="year24"
      value={1995}
    >
      1995
    </option>
    <option
      key="year25"
      value={1994}
    >
      1994
    </option>
    <option
      key="year26"
      value={1993}
    >
      1993
    </option>
    <option
      key="year27"
      value={1992}
    >
      1992
    </option>
    <option
      key="year28"
      value={1991}
    >
      1991
    </option>
    <option
      key="year29"
      value={1990}
    >
      1990
    </option>
    <option
      key="year30"
      value={1989}
    >
      1989
    </option>
    <option
      key="year31"
      value={1988}
    >
      1988
    </option>
    <option
      key="year32"
      value={1987}
    >
      1987
    </option>
    <option
      key="year33"
      value={1986}
    >
      1986
    </option>
    <option
      key="year34"
      value={1985}
    >
      1985
    </option>
    <option
      key="year35"
      value={1984}
    >
      1984
    </option>
    <option
      key="year36"
      value={1983}
    >
      1983
    </option>
    <option
      key="year37"
      value={1982}
    >
      1982
    </option>
    <option
      key="year38"
      value={1981}
    >
      1981
    </option>
    <option
      key="year39"
      value={1980}
    >
      1980
    </option>
    <option
      key="year40"
      value={1979}
    >
      1979
    </option>
    <option
      key="year41"
      value={1978}
    >
      1978
    </option>
    <option
      key="year42"
      value={1977}
    >
      1977
    </option>
    <option
      key="year43"
      value={1976}
    >
      1976
    </option>
    <option
      key="year44"
      value={1975}
    >
      1975
    </option>
    <option
      key="year45"
      value={1974}
    >
      1974
    </option>
    <option
      key="year46"
      value={1973}
    >
      1973
    </option>
    <option
      key="year47"
      value={1972}
    >
      1972
    </option>
    <option
      key="year48"
      value={1971}
    >
      1971
    </option>
    <option
      key="year49"
      value={1970}
    >
      1970
    </option>
    <option
      key="year50"
      value={1969}
    >
      1969
    </option>
    <option
      key="year51"
      value={1968}
    >
      1968
    </option>
    <option
      key="year52"
      value={1967}
    >
      1967
    </option>
    <option
      key="year53"
      value={1966}
    >
      1966
    </option>
    <option
      key="year54"
      value={1965}
    >
      1965
    </option>
    <option
      key="year55"
      value={1964}
    >
      1964
    </option>
    <option
      key="year56"
      value={1963}
    >
      1963
    </option>
    <option
      key="year57"
      value={1962}
    >
      1962
    </option>
    <option
      key="year58"
      value={1961}
    >
      1961
    </option>
    <option
      key="year59"
      value={1960}
    >
      1960
    </option>
    <option
      key="year60"
      value={1959}
    >
      1959
    </option>
    <option
      key="year61"
      value={1958}
    >
      1958
    </option>
    <option
      key="year62"
      value={1957}
    >
      1957
    </option>
    <option
      key="year63"
      value={1956}
    >
      1956
    </option>
    <option
      key="year64"
      value={1955}
    >
      1955
    </option>
    <option
      key="year65"
      value={1954}
    >
      1954
    </option>
    <option
      key="year66"
      value={1953}
    >
      1953
    </option>
    <option
      key="year67"
      value={1952}
    >
      1952
    </option>
    <option
      key="year68"
      value={1951}
    >
      1951
    </option>
    <option
      key="year69"
      value={1950}
    >
      1950
    </option>
    <option
      key="year70"
      value={1949}
    >
      1949
    </option>
    <option
      key="year71"
      value={1948}
    >
      1948
    </option>
    <option
      key="year72"
      value={1947}
    >
      1947
    </option>
    <option
      key="year73"
      value={1946}
    >
      1946
    </option>
    <option
      key="year74"
      value={1945}
    >
      1945
    </option>
    <option
      key="year75"
      value={1944}
    >
      1944
    </option>
    <option
      key="year76"
      value={1943}
    >
      1943
    </option>
    <option
      key="year77"
      value={1942}
    >
      1942
    </option>
    <option
      key="year78"
      value={1941}
    >
      1941
    </option>
    <option
      key="year79"
      value={1940}
    >
      1940
    </option>
    <option
      key="year80"
      value={1939}
    >
      1939
    </option>
    <option
      key="year81"
      value={1938}
    >
      1938
    </option>
    <option
      key="year82"
      value={1937}
    >
      1937
    </option>
    <option
      key="year83"
      value={1936}
    >
      1936
    </option>
    <option
      key="year84"
      value={1935}
    >
      1935
    </option>
    <option
      key="year85"
      value={1934}
    >
      1934
    </option>
    <option
      key="year86"
      value={1933}
    >
      1933
    </option>
    <option
      key="year87"
      value={1932}
    >
      1932
    </option>
    <option
      key="year88"
      value={1931}
    >
      1931
    </option>
    <option
      key="year89"
      value={1930}
    >
      1930
    </option>
    <option
      key="year90"
      value={1929}
    >
      1929
    </option>
    <option
      key="year91"
      value={1928}
    >
      1928
    </option>
    <option
      key="year92"
      value={1927}
    >
      1927
    </option>
    <option
      key="year93"
      value={1926}
    >
      1926
    </option>
    <option
      key="year94"
      value={1925}
    >
      1925
    </option>
    <option
      key="year95"
      value={1924}
    >
      1924
    </option>
    <option
      key="year96"
      value={1923}
    >
      1923
    </option>
    <option
      key="year97"
      value={1922}
    >
      1922
    </option>
    <option
      key="year98"
      value={1921}
    >
      1921
    </option>
    <option
      key="year99"
      value={1920}
    >
      1920
    </option>
    <option
      key="year100"
      value={1919}
    >
      1919
    </option>
    <option
      key="year101"
      value={1918}
    >
      1918
    </option>
    <option
      key="year102"
      value={1917}
    >
      1917
    </option>
    <option
      key="year103"
      value={1916}
    >
      1916
    </option>
    <option
      key="year104"
      value={1915}
    >
      1915
    </option>
    <option
      key="year105"
      value={1914}
    >
      1914
    </option>
    <option
      key="year106"
      value={1913}
    >
      1913
    </option>
    <option
      key="year107"
      value={1912}
    >
      1912
    </option>
    <option
      key="year108"
      value={1911}
    >
      1911
    </option>
    <option
      key="year109"
      value={1910}
    >
      1910
    </option>
    <option
      key="year110"
      value={1909}
    >
      1909
    </option>
    <option
      key="year111"
      value={1908}
    >
      1908
    </option>
    <option
      key="year112"
      value={1907}
    >
      1907
    </option>
    <option
      key="year113"
      value={1906}
    >
      1906
    </option>
    <option
      key="year114"
      value={1905}
    >
      1905
    </option>
    <option
      key="year115"
      value={1904}
    >
      1904
    </option>
    <option
      key="year116"
      value={1903}
    >
      1903
    </option>
    <option
      key="year117"
      value={1902}
    >
      1902
    </option>
    <option
      key="year118"
      value={1901}
    >
      1901
    </option>
    <option
      key="year119"
      value={1900}
    >
      1900
    </option>
  </select>
  <div>
    <button
      className="button"
    >
      Save Movie
    </button>
  </div>
</form>
`;

exports[`should render error for invalid form submission 2`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <p
    className="form__error"
  >
    Please provide a name, image, and a genre for the movie.
  </p>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Name"
    type="text"
    value=""
  />
  <select
    className="select"
    onChange={[Function]}
    placeholder="Genre"
    value=""
  >
    <option
      value="2019"
    >
      Genre...
    </option>
    <option
      value="Action"
    >
      Action
    </option>
    <option
      value="Animation"
    >
      Animation
    </option>
    <option
      value="Adventure"
    >
      Adventure
    </option>
    <option
      value="Comedy"
    >
      Comedy
    </option>
    <option
      value="Crime"
    >
      Crime
    </option>
    <option
      value="Drama"
    >
      Drama
    </option>
    <option
      value="Fantasy"
    >
      Fantasy
    </option>
    <option
      value="Horror"
    >
      Horror
    </option>
    <option
      value="Romance"
    >
      Romance
    </option>
    <option
      value="Science Fiction"
    >
      Science Fiction
    </option>
    <option
      value="Thriller"
    >
      Thriller
    </option>
  </select>
  <input
    className="text-input"
    onChange={[Function]}
    placeholder="Description"
    type="text"
    value=""
  />
  <input
    className="text-input"
    onChange={[Function]}
    placeholder="Image URL"
    type="text"
    value=""
  />
  <select
    className="select"
    onChange={[Function]}
    placeholder="Year"
    value="2019"
  >
    <option
      key="year0"
      value={2019}
    >
      2019
    </option>
    <option
      key="year1"
      value={2018}
    >
      2018
    </option>
    <option
      key="year2"
      value={2017}
    >
      2017
    </option>
    <option
      key="year3"
      value={2016}
    >
      2016
    </option>
    <option
      key="year4"
      value={2015}
    >
      2015
    </option>
    <option
      key="year5"
      value={2014}
    >
      2014
    </option>
    <option
      key="year6"
      value={2013}
    >
      2013
    </option>
    <option
      key="year7"
      value={2012}
    >
      2012
    </option>
    <option
      key="year8"
      value={2011}
    >
      2011
    </option>
    <option
      key="year9"
      value={2010}
    >
      2010
    </option>
    <option
      key="year10"
      value={2009}
    >
      2009
    </option>
    <option
      key="year11"
      value={2008}
    >
      2008
    </option>
    <option
      key="year12"
      value={2007}
    >
      2007
    </option>
    <option
      key="year13"
      value={2006}
    >
      2006
    </option>
    <option
      key="year14"
      value={2005}
    >
      2005
    </option>
    <option
      key="year15"
      value={2004}
    >
      2004
    </option>
    <option
      key="year16"
      value={2003}
    >
      2003
    </option>
    <option
      key="year17"
      value={2002}
    >
      2002
    </option>
    <option
      key="year18"
      value={2001}
    >
      2001
    </option>
    <option
      key="year19"
      value={2000}
    >
      2000
    </option>
    <option
      key="year20"
      value={1999}
    >
      1999
    </option>
    <option
      key="year21"
      value={1998}
    >
      1998
    </option>
    <option
      key="year22"
      value={1997}
    >
      1997
    </option>
    <option
      key="year23"
      value={1996}
    >
      1996
    </option>
    <option
      key="year24"
      value={1995}
    >
      1995
    </option>
    <option
      key="year25"
      value={1994}
    >
      1994
    </option>
    <option
      key="year26"
      value={1993}
    >
      1993
    </option>
    <option
      key="year27"
      value={1992}
    >
      1992
    </option>
    <option
      key="year28"
      value={1991}
    >
      1991
    </option>
    <option
      key="year29"
      value={1990}
    >
      1990
    </option>
    <option
      key="year30"
      value={1989}
    >
      1989
    </option>
    <option
      key="year31"
      value={1988}
    >
      1988
    </option>
    <option
      key="year32"
      value={1987}
    >
      1987
    </option>
    <option
      key="year33"
      value={1986}
    >
      1986
    </option>
    <option
      key="year34"
      value={1985}
    >
      1985
    </option>
    <option
      key="year35"
      value={1984}
    >
      1984
    </option>
    <option
      key="year36"
      value={1983}
    >
      1983
    </option>
    <option
      key="year37"
      value={1982}
    >
      1982
    </option>
    <option
      key="year38"
      value={1981}
    >
      1981
    </option>
    <option
      key="year39"
      value={1980}
    >
      1980
    </option>
    <option
      key="year40"
      value={1979}
    >
      1979
    </option>
    <option
      key="year41"
      value={1978}
    >
      1978
    </option>
    <option
      key="year42"
      value={1977}
    >
      1977
    </option>
    <option
      key="year43"
      value={1976}
    >
      1976
    </option>
    <option
      key="year44"
      value={1975}
    >
      1975
    </option>
    <option
      key="year45"
      value={1974}
    >
      1974
    </option>
    <option
      key="year46"
      value={1973}
    >
      1973
    </option>
    <option
      key="year47"
      value={1972}
    >
      1972
    </option>
    <option
      key="year48"
      value={1971}
    >
      1971
    </option>
    <option
      key="year49"
      value={1970}
    >
      1970
    </option>
    <option
      key="year50"
      value={1969}
    >
      1969
    </option>
    <option
      key="year51"
      value={1968}
    >
      1968
    </option>
    <option
      key="year52"
      value={1967}
    >
      1967
    </option>
    <option
      key="year53"
      value={1966}
    >
      1966
    </option>
    <option
      key="year54"
      value={1965}
    >
      1965
    </option>
    <option
      key="year55"
      value={1964}
    >
      1964
    </option>
    <option
      key="year56"
      value={1963}
    >
      1963
    </option>
    <option
      key="year57"
      value={1962}
    >
      1962
    </option>
    <option
      key="year58"
      value={1961}
    >
      1961
    </option>
    <option
      key="year59"
      value={1960}
    >
      1960
    </option>
    <option
      key="year60"
      value={1959}
    >
      1959
    </option>
    <option
      key="year61"
      value={1958}
    >
      1958
    </option>
    <option
      key="year62"
      value={1957}
    >
      1957
    </option>
    <option
      key="year63"
      value={1956}
    >
      1956
    </option>
    <option
      key="year64"
      value={1955}
    >
      1955
    </option>
    <option
      key="year65"
      value={1954}
    >
      1954
    </option>
    <option
      key="year66"
      value={1953}
    >
      1953
    </option>
    <option
      key="year67"
      value={1952}
    >
      1952
    </option>
    <option
      key="year68"
      value={1951}
    >
      1951
    </option>
    <option
      key="year69"
      value={1950}
    >
      1950
    </option>
    <option
      key="year70"
      value={1949}
    >
      1949
    </option>
    <option
      key="year71"
      value={1948}
    >
      1948
    </option>
    <option
      key="year72"
      value={1947}
    >
      1947
    </option>
    <option
      key="year73"
      value={1946}
    >
      1946
    </option>
    <option
      key="year74"
      value={1945}
    >
      1945
    </option>
    <option
      key="year75"
      value={1944}
    >
      1944
    </option>
    <option
      key="year76"
      value={1943}
    >
      1943
    </option>
    <option
      key="year77"
      value={1942}
    >
      1942
    </option>
    <option
      key="year78"
      value={1941}
    >
      1941
    </option>
    <option
      key="year79"
      value={1940}
    >
      1940
    </option>
    <option
      key="year80"
      value={1939}
    >
      1939
    </option>
    <option
      key="year81"
      value={1938}
    >
      1938
    </option>
    <option
      key="year82"
      value={1937}
    >
      1937
    </option>
    <option
      key="year83"
      value={1936}
    >
      1936
    </option>
    <option
      key="year84"
      value={1935}
    >
      1935
    </option>
    <option
      key="year85"
      value={1934}
    >
      1934
    </option>
    <option
      key="year86"
      value={1933}
    >
      1933
    </option>
    <option
      key="year87"
      value={1932}
    >
      1932
    </option>
    <option
      key="year88"
      value={1931}
    >
      1931
    </option>
    <option
      key="year89"
      value={1930}
    >
      1930
    </option>
    <option
      key="year90"
      value={1929}
    >
      1929
    </option>
    <option
      key="year91"
      value={1928}
    >
      1928
    </option>
    <option
      key="year92"
      value={1927}
    >
      1927
    </option>
    <option
      key="year93"
      value={1926}
    >
      1926
    </option>
    <option
      key="year94"
      value={1925}
    >
      1925
    </option>
    <option
      key="year95"
      value={1924}
    >
      1924
    </option>
    <option
      key="year96"
      value={1923}
    >
      1923
    </option>
    <option
      key="year97"
      value={1922}
    >
      1922
    </option>
    <option
      key="year98"
      value={1921}
    >
      1921
    </option>
    <option
      key="year99"
      value={1920}
    >
      1920
    </option>
    <option
      key="year100"
      value={1919}
    >
      1919
    </option>
    <option
      key="year101"
      value={1918}
    >
      1918
    </option>
    <option
      key="year102"
      value={1917}
    >
      1917
    </option>
    <option
      key="year103"
      value={1916}
    >
      1916
    </option>
    <option
      key="year104"
      value={1915}
    >
      1915
    </option>
    <option
      key="year105"
      value={1914}
    >
      1914
    </option>
    <option
      key="year106"
      value={1913}
    >
      1913
    </option>
    <option
      key="year107"
      value={1912}
    >
      1912
    </option>
    <option
      key="year108"
      value={1911}
    >
      1911
    </option>
    <option
      key="year109"
      value={1910}
    >
      1910
    </option>
    <option
      key="year110"
      value={1909}
    >
      1909
    </option>
    <option
      key="year111"
      value={1908}
    >
      1908
    </option>
    <option
      key="year112"
      value={1907}
    >
      1907
    </option>
    <option
      key="year113"
      value={1906}
    >
      1906
    </option>
    <option
      key="year114"
      value={1905}
    >
      1905
    </option>
    <option
      key="year115"
      value={1904}
    >
      1904
    </option>
    <option
      key="year116"
      value={1903}
    >
      1903
    </option>
    <option
      key="year117"
      value={1902}
    >
      1902
    </option>
    <option
      key="year118"
      value={1901}
    >
      1901
    </option>
    <option
      key="year119"
      value={1900}
    >
      1900
    </option>
  </select>
  <div>
    <button
      className="button"
    >
      Save Movie
    </button>
  </div>
</form>
`;
